--- a/index.html
+++ b/index.html
@@ -5,153 +5,183 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Tanaka Shumba | Cybersecurity Portfolio</title>
 <style>
-    /* Reset */
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Courier New', Courier, monospace; background: #000; color: #00ff00; line-height: 1.6; overflow-x: hidden; }
-    a { color: #00ff00; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-
-    canvas { position: fixed; top: 0; left: 0; z-index: -1; }
-
-    .container { max-width: 1200px; margin: 0 auto; padding: 2rem; }
-
-    header { text-align: center; margin-bottom: 3rem; }
-    header h1 { font-size: 3rem; margin-bottom: 0.5rem; }
-    header p { font-size: 1.2rem; color: #a0ffa0; }
-
-    section { margin-bottom: 4rem; }
-
-    #about { display: flex; align-items: center; gap: 2rem; flex-wrap: wrap; }
-    #about img { width: 200px; border-radius: 50%; border: 2px solid #00ff00; }
-    #about .about-text { max-width: 700px; }
-
-    h2 { font-size: 2rem; margin-bottom: 1rem; color: #a0ffa0; }
-
-    .projects-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 2rem; }
-    .project {
-        display: block;
-        background: rgba(0,255,0,0.05);
-        padding: 1.5rem;
-        border: 1px solid #00ff00;
-        border-radius: 10px;
-        transition: transform 0.3s, box-shadow 0.3s;
-        min-height: 180px;
-    }
-    .project h3 { margin-bottom: 0.5rem; font-size: 1.4rem; }
-    .project p { font-size: 1rem; color: #a0ffa0; }
-
-    .project:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 0 20px #00ff00;
-    }
-
-    #contact p { margin-bottom: 0.5rem; }
-
-    footer { text-align: center; color: #00ff00; margin-top: 3rem; }
+  body {
+    margin: 0;
+    font-family: 'Arial', sans-serif;
+    background: #0b0b0b;
+    color: #fff;
+  }
+  header {
+    background: #001f3f;
+    padding: 50px 20px;
+    text-align: center;
+  }
+  header h1 {
+    margin: 0;
+    font-size: 3em;
+    color: #00ff00;
+  }
+  header p {
+    font-size: 1.2em;
+    color: #ccc;
+  }
+  section {
+    padding: 50px 20px;
+    max-width: 1000px;
+    margin: auto;
+  }
+  #about {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 20px;
+  }
+  #about img {
+    max-width: 250px;
+    border-radius: 10px;
+    flex-shrink: 0;
+  }
+  #about .text {
+    flex: 1;
+    min-width: 250px;
+  }
+  h2 {
+    color: #00bfff;
+    margin-bottom: 20px;
+  }
+  .projects-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+  }
+  .project-card {
+    background: #111;
+    border: 2px solid #00bfff;
+    padding: 20px;
+    border-radius: 10px;
+    transition: transform 0.3s, box-shadow 0.3s;
+    text-decoration: none;
+    color: #fff;
+  }
+  .project-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 0 20px #00bfff;
+  }
+  .project-card h3 {
+    margin-top: 0;
+    color: #00ff00;
+  }
+  .contact-form input, .contact-form textarea, .contact-form button {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+    border: none;
+  }
+  .contact-form button {
+    background: #00bfff;
+    color: #fff;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  footer {
+    background: #001f3f;
+    text-align: center;
+    padding: 20px;
+    color: #ccc;
+  }
+  /* Subtle moving green particles background */
+  body::before {
+    content: '';
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    z-index: -1;
+    background: radial-gradient(circle, rgba(0,255,0,0.1) 1px, transparent 1px);
+    background-size: 20px 20px;
+    animation: moveBG 20s linear infinite;
+  }
+  @keyframes moveBG {
+    from {background-position: 0 0;}
+    to {background-position: 200px 200px;}
+  }
 </style>
 </head>
 <body>
-<canvas id="matrix"></canvas>
 
-<div class="container">
 <header>
-    <h1>Tanaka Shumba</h1>
-    <p>Cybersecurity Professional | Python | Network & Cloud Security | Penetration Testing</p>
+  <h1>Tanaka Shumba</h1>
+  <p>Cybersecurity Professional | Python, Network Security, Ethical Hacking</p>
 </header>
 
 <section id="about">
-    <img src="images/about-me.jpg" alt="Tanaka Shumba">
-    <div class="about-text">
-        <h2>About Me</h2>
-        <p>Detail-oriented cybersecurity professional with a B.S. in Cybersecurity and pursuing an M.S. in Computer Science – Cybersecurity. Experienced in threat detection, incident response, penetration testing, and network monitoring. Skilled at analyzing logs, identifying vulnerabilities, and implementing mitigation strategies. Seeking to contribute to a SOC or cybersecurity team to strengthen organizational security posture.</p>
-    </div>
+  <img src="images/about-me.jpg" alt="Tanaka Shumba">
+  <div class="text">
+    <h2>About Me</h2>
+    <p>Detail-oriented Cybersecurity professional with a B.S. in Cybersecurity and pursuing an M.S. in Computer Science – Cybersecurity. Experienced in threat detection, incident response, penetration testing, and network monitoring. Skilled at analyzing logs, identifying vulnerabilities, and implementing mitigation strategies. Seeking opportunities to contribute to SOC and cybersecurity teams.</p>
+  </div>
 </section>
 
 <section id="projects">
-    <h2>Projects</h2>
-    <div class="projects-grid">
-        <a href="https://github.com/TanakaShumba/MalwareAnalyzer" target="_blank" class="project">
-            <h3>Malware Analyzer</h3>
-            <p>Python script simulating analysis of suspicious files and detecting potential malicious behaviors safely.</p>
-        </a>
-        <a href="https://github.com/TanakaShumba/EthicalHackingSimulator" target="_blank" class="project">
-            <h3>Ethical Hacking Simulator</h3>
-            <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
-        </a>
-        <a href="https://github.com/TanakaShumba/CloudSecurityChecker" target="_blank" class="project">
-            <h3>Cloud Security Checker</h3>
-            <p>Python script for simulating checks on cloud service configurations for common misconfigurations.</p>
-        </a>
-        <a href="https://github.com/TanakaShumba/BasicPenTest" target="_blank" class="project">
-            <h3>Basic Pen Test</h3>
-            <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
-        </a>
-        <a href="https://github.com/TanakaShumba/SimpleIDS" target="_blank" class="project">
-            <h3>Simple IDS</h3>
-            <p>Basic IDS/IPS simulation in Python demonstrating threat detection mechanisms.</p>
-        </a>
-        <a href="https://github.com/TanakaShumba/CybersecurityLabSeries" target="_blank" class="project">
-            <h3>Cybersecurity Lab Series</h3>
-            <p>Collection of Python exercises and labs for hands-on cybersecurity learning.</p>
-        </a>
-        <a href="https://github.com/TanakaShumba/SecureHospitalSystem" target="_blank" class="project">
-            <h3>Secure Hospital System</h3>
-            <p>Python-based secure hospital management system with focus on data privacy and user access control.</p>
-        </a>
-        <a href="https://github.com/TanakaShumba/VoIPTrafficAnalyzer" target="_blank" class="project">
-            <h3>VoIP Traffic Analyzer</h3>
-            <p>Captures and analyzes VoIP RTP packets on a local network safely for educational purposes.</p>
-        </a>
-        <a href="https://github.com/TanakaShumba/PythonNetworkScanner" target="_blank" class="project">
-            <h3>Python Network Scanner</h3>
-            <p>Python tool for scanning networks and identifying devices for security auditing purposes.</p>
-        </a>
-        <a href="https://github.com/TanakaShumba/HealthcareFlaskApp" target="_blank" class="project">
-            <h3>Healthcare System (Flask)</h3>
-            <p>Simple healthcare management system built with Flask, managing appointments, doctors, and payments.</p>
-        </a>
-    </div>
+  <h2>Projects</h2>
+  <div class="projects-container">
+    <a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank" class="project-card">
+      <h3>malware-analyzer</h3>
+      <p>Python script simulating analyzing suspicious files and detecting potential malicious behaviors.</p>
+    </a>
+    <a href="https://github.com/TanakaShumba/ethical-hacking-sim" target="_blank" class="project-card">
+      <h3>ethical-hacking-sim</h3>
+      <p>Python scripts simulating ethical hacking techniques for learning and demonstration purposes.</p>
+    </a>
+    <a href="https://github.com/TanakaShumba/cloud-security-checker" target="_blank" class="project-card">
+      <h3>cloud-security-checker</h3>
+      <p>Python script simulating checking cloud service configurations for common security misconfigurations.</p>
+    </a>
+    <a href="https://github.com/TanakaShumba/basic-pen-test" target="_blank" class="project-card">
+      <h3>basic-pen-test</h3>
+      <p>Simple Python script for educational penetration testing and vulnerability scanning.</p>
+    </a>
+    <a href="https://github.com/TanakaShumba/simple-ids" target="_blank" class="project-card">
+      <h3>simple-ids</h3>
+      <p>A basic IDS/IPS simulation in Python.</p>
+    </a>
+    <a href="https://github.com/TanakaShumba/cybersecurity-lab-series" target="_blank" class="project-card">
+      <h3>cybersecurity-lab-series</h3>
+      <p>Collection of cybersecurity lab exercises for learning and experimentation.</p>
+    </a>
+    <a href="https://github.com/TanakaShumba/secure-hospital-system" target="_blank" class="project-card">
+      <h3>secure-hospital-system</h3>
+      <p>Python-based secure hospital management system.</p>
+    </a>
+    <a href="https://github.com/TanakaShumba/voip-traffic-analyzer" target="_blank" class="project-card">
+      <h3>voip-traffic-analyzer</h3>
+      <p>Python project capturing and analyzing VoIP RTP packets on a local network for educational use.</p>
+    </a>
+    <a href="https://github.com/TanakaShumba/python-network-scanner" target="_blank" class="project-card">
+      <h3>python-network-scanner</h3>
+      <p>Python project for network scanning.</p>
+    </a>
+    <a href="https://github.com/TanakaShumba/Healthcare_System" target="_blank" class="project-card">
+      <h3>Healthcare_System</h3>
+      <p>Flask-based healthcare management system for appointments, doctors, and payments.</p>
+    </a>
+  </div>
 </section>
 
 <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:tanakashumba04@gmail.com">tanakashumba04@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">www.linkedin.com/in/tanakashumba-</a></p>
-    <p>GitHub: <a href="https://github.com/TanakaShumba" target="_blank">github.com/TanakaShumba</a></p>
+  <h2>Contact</h2>
+  <div class="contact-form">
+    <input type="text" placeholder="Your Name" />
+    <input type="email" placeholder="Your Email" />
+    <textarea placeholder="Your Message"></textarea>
+    <button>Send Message</button>
+    <p>Connect with me: <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank" style="color:#00bfff;">LinkedIn</a></p>
+  </div>
 </section>
 
 <footer>
-    <p>&copy; 2025 Tanaka Shumba</p>
+  &copy; 2025 Tanaka Shumba
 </footer>
-</div>
 
-<script>
-const canvas = document.getElementById('matrix');
-const ctx = canvas.getContext('2d');
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-const letters = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^&*()';
-const fontSize = 16;
-const columns = canvas.width / fontSize;
-const drops = Array.from({length: columns}, () => Math.random() * canvas.height);
-
-function draw() {
-    ctx.fillStyle = 'rgba(0,0,0,0.05)';
-    ctx.fillRect(0,0,canvas.width,canvas.height);
-    ctx.fillStyle = '#00ff00';
-    ctx.font = fontSize + 'px monospace';
-    for (let i = 0; i < drops.length; i++) {
-        const text = letters[Math.floor(Math.random() * letters.length)];
-        ctx.fillText(text, i * fontSize, drops[i]);
-        drops[i] += fontSize;
-        if(drops[i] > canvas.height && Math.random() > 0.975) drops[i] = 0;
-    }
-}
-setInterval(draw, 50);
-window.addEventListener('resize', () => {
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-});
-</script>
 </body>
 </html>
