--- a/index.html
+++ b/index.html
@@ -1,145 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tanaka Shumba | Cybersecurity Portfolio</title>
-<style>
-/* Reset & basic styling */
-* { margin: 0; padding: 0; box-sizing: border-box; font-family: Arial, sans-serif; scroll-behavior: smooth; }
-body { background-color: #0a0a0a; color: #e0f7fa; line-height: 1.6; }
-a { color: #00ff99; text-decoration: none; }
-a:hover { text-decoration: underline; }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tanaka Shumba | Cybersecurity Portfolio</title>
+    <style>
+        /* Global Styles */
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+        body {
+            background-color: #0d1117;
+            color: #c9f0ff;
+            line-height: 1.6;
+        }
+        a {
+            color: #39ff14; /* neon green links */
+            text-decoration: none;
+        }
+        a:hover {
+            color: #0ff;
+        }
 
-/* Header & Navigation */
-header { padding: 20px; text-align: center; background-color: #001f2f; position: sticky; top: 0; z-index: 10; }
-header h1 { font-size: 2.2rem; color: #00ffff; }
-nav { margin-top: 10px; }
-nav a { margin: 0 10px; font-weight: bold; color: #00bfff; }
+        /* Header */
+        header {
+            padding: 2rem;
+            text-align: center;
+            background: linear-gradient(90deg, #0f0f0f, #0a192f);
+            border-bottom: 2px solid #39ff14;
+        }
+        header h1 {
+            font-size: 2.5rem;
+            margin-bottom: 0.5rem;
+        }
+        header p {
+            font-size: 1.2rem;
+            color: #8bd3f7;
+        }
 
-/* Sections */
-section { padding: 60px 20px; max-width: 1000px; margin: 0 auto; }
-h2 { font-size: 2rem; margin-bottom: 20px; color: #00ffff; }
+        /* Sections */
+        section {
+            padding: 3rem 2rem;
+            max-width: 1000px;
+            margin: auto;
+        }
+        h2 {
+            font-size: 2rem;
+            margin-bottom: 1rem;
+            border-bottom: 2px solid #39ff14;
+            display: inline-block;
+            padding-bottom: 0.5rem;
+        }
 
-/* About Me */
-#about { display: flex; align-items: center; gap: 20px; flex-wrap: wrap; justify-content: center; }
-#about img { width: 180px; border-radius: 50%; border: 3px solid #00ff99; }
-#about div { max-width: 700px; }
+        /* About Me */
+        #about {
+            display: flex;
+            align-items: center;
+            gap: 2rem;
+            flex-wrap: wrap;
+        }
+        #about img {
+            width: 200px;
+            border-radius: 50%;
+            border: 3px solid #39ff14;
+        }
+        #about p {
+            flex: 1;
+            font-size: 1.1rem;
+        }
 
-/* Projects */
-#projects { background-color: #001f2f; border-radius: 10px; padding: 40px 20px; margin-top: 40px; }
-.project-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; }
-.project-card { background-color: #0a1a2a; padding: 20px; border-radius: 8px; transition: transform 0.3s, box-shadow 0.3s; cursor: pointer; }
-.project-card:hover { transform: translateY(-5px); box-shadow: 0 0 15px #00ff99; }
-.project-card h3 { margin-bottom: 10px; color: #00ff99; }
+        /* Projects */
+        #projects {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 2rem;
+        }
+        .project-card {
+            background-color: #111827;
+            padding: 1.5rem;
+            border: 2px solid #39ff14;
+            border-radius: 10px;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+        .project-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 0 15px #39ff14;
+        }
+        .project-card h3 {
+            margin-bottom: 0.5rem;
+            color: #39ff14;
+        }
+        .project-card p {
+            color: #c9f0ff;
+        }
 
-/* Contact */
-#contact { background-color: #001f2f; border-radius: 10px; padding: 40px 20px; text-align: center; margin-top: 40px; }
-#contact a { display: inline-block; margin: 10px; font-size: 1.2rem; }
+        /* Contact */
+        #contact form {
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+            max-width: 400px;
+        }
+        #contact input, #contact textarea {
+            padding: 0.75rem;
+            border-radius: 5px;
+            border: 1px solid #39ff14;
+            background-color: #111827;
+            color: #c9f0ff;
+        }
+        #contact input[type="submit"] {
+            cursor: pointer;
+            background-color: #39ff14;
+            color: #0d1117;
+            border: none;
+            font-weight: bold;
+            transition: background 0.3s;
+        }
+        #contact input[type="submit"]:hover {
+            background-color: #0ff;
+        }
 
-/* Footer */
-footer { text-align: center; padding: 20px; color: #555; margin-top: 20px; }
-
-/* Background animation */
-body::before {
-    content: '';
-    position: fixed;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background: radial-gradient(circle, rgba(0,255,0,0.1) 1px, transparent 1px);
-    background-size: 20px 20px;
-    z-index: -1;
-    animation: moveBg 25s linear infinite;
-}
-@keyframes moveBg { 0% { background-position: 0 0; } 100% { background-position: 1000px 1000px; } }
-
-/* Responsive adjustments */
-@media (max-width: 768px) {
-    header h1 { font-size: 2rem; }
-    nav a { margin: 0 5px; font-size: 0.9rem; }
-    #about { flex-direction: column; text-align: center; }
-    #about img { width: 150px; }
-}
-@media (max-width: 480px) {
-    #projects { padding: 20px 10px; }
-    .project-card { padding: 15px; }
-}
-</style>
+        /* Footer */
+        footer {
+            text-align: center;
+            padding: 2rem;
+            background-color: #0a192f;
+            color: #8bd3f7;
+            border-top: 2px solid #39ff14;
+        }
+    </style>
 </head>
 <body>
-<header>
-    <h1>Tanaka Shumba</h1>
-    <nav>
-        <a href="#about">About Me</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-    </nav>
-</header>
 
-<section id="about">
-    <img src="images/about-me.jpg" alt="Tanaka Shumba">
-    <div>
-        <h2>Hi, I'm Tanaka Shumba</h2>
-        <p>Welcome! This portfolio showcases my cybersecurity projects and demonstrates my skills in threat detection, penetration testing, and network security.</p>
-        <p>My ambition is to make a significant impact in the cybersecurity field by protecting systems and helping organizations stay secure. Explore my projects below and get a sense of my professional journey.</p>
-    </div>
-</section>
+    <!-- Header -->
+    <header>
+        <h1>Tanaka Shumba</h1>
+        <p>Cybersecurity Professional | Showcasing Projects & Ambitions</p>
+    </header>
 
-<section id="projects">
-    <h2>My Projects</h2>
-    <div class="project-grid">
-        <div class="project-card" onclick="window.open('https://github.com/TanakaShumba/malware-analyzer', '_blank')">
-            <h3>Malware Analyzer</h3>
-            <p>Python script simulating malware detection in a controlled environment.</p>
+    <!-- About Me Section -->
+    <section id="about">
+        <img src="images/about-me.jpg" alt="Tanaka Shumba">
+        <div>
+            <h2>Hi there!</h2>
+            <p>Welcome to my portfolio. Here, I showcase my cybersecurity projects and share my ambitions to grow in the field. I aim to create secure solutions, learn continuously, and contribute to impactful cybersecurity work.</p>
         </div>
-        <div class="project-card" onclick="window.open('https://github.com/TanakaShumba/ethical-hacking-sim', '_blank')">
-            <h3>Ethical Hacking Sim</h3>
-            <p>Simulations of ethical hacking techniques for learning purposes.</p>
-        </div>
-        <div class="project-card" onclick="window.open('https://github.com/TanakaShumba/cloud-security-checker', '_blank')">
-            <h3>Cloud Security Checker</h3>
-            <p>Checking cloud services for common security misconfigurations.</p>
-        </div>
-        <div class="project-card" onclick="window.open('https://github.com/TanakaShumba/basic-pen-test', '_blank')">
-            <h3>Basic Pen Test</h3>
-            <p>Educational penetration testing and vulnerability scanning script.</p>
-        </div>
-        <div class="project-card" onclick="window.open('https://github.com/TanakaShumba/simple-ids', '_blank')">
-            <h3>Simple IDS</h3>
-            <p>Basic IDS/IPS simulation for detecting attacks.</p>
-        </div>
-        <div class="project-card" onclick="window.open('https://github.com/TanakaShumba/cybersecurity-lab-series', '_blank')">
-            <h3>Cybersecurity Lab Series</h3>
-            <p>Hands-on cybersecurity labs and scripts collection.</p>
-        </div>
-        <div class="project-card" onclick="window.open('https://github.com/TanakaShumba/secure-hospital-system', '_blank')">
-            <h3>Secure Hospital System</h3>
-            <p>Python-based secure hospital management system for patient data protection.</p>
-        </div>
-        <div class="project-card" onclick="window.open('https://github.com/TanakaShumba/voip-traffic-analyzer', '_blank')">
-            <h3>VoIP Traffic Analyzer</h3>
-            <p>Captures and analyzes VoIP RTP packets safely for learning purposes.</p>
-        </div>
-        <div class="project-card" onclick="window.open('https://github.com/TanakaShumba/python-network-scanner', '_blank')">
-            <h3>Python Network Scanner</h3>
-            <p>Tool for scanning networks and identifying connected devices and vulnerabilities.</p>
-        </div>
-        <div class="project-card" onclick="window.open('https://github.com/TanakaShumba/Healthcare_System', '_blank')">
-            <h3>Healthcare System</h3>
-            <p>Flask-based healthcare system managing appointments, doctors, and payments securely.</p>
-        </div>
-    </div>
-</section>
+    </section>
 
-<section id="contact">
-    <h2>Contact Me</h2>
-    <p>Reach out via email or LinkedIn:</p>
-    <a href="mailto:tanakashumba04@gmail.com">Email Me</a>
-    <a href="https://www.linkedin.com/in/tanakashumba-" target="_blank">LinkedIn</a>
-</section>
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>Projects</h2>
 
-<footer>
-    &copy; 2025 Tanaka Shumba
-</footer>
-</body>
-</html>
+        <div class="project-card">
+            <h3><a href="https://github.com/TanakaShumba/malware-analyzer" target="_blank">Malware Analyzer</a></h3>
+            <p>Python script to simulate analyzing suspicious files and detecting potential malicious behaviors in a controlled environment.</p>
